--- a/package.json
+++ b/package.json
@@ -1,17 +1,35 @@
 {
-  "name": "test",
-  "version": "1.0.0",
-  "description": "",
-  "main": "contacts.js",
-  "type": "module",
-  "scripts": {
-    "reset": "dev/reset.sh",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "prompt": "^1.1.0",
-    "sqlite3": "^5.0.2"
-  }
+	"name": "test",
+	"version": "1.0.0",
+	"description": "test cli app",
+	"scripts": {
+		"start": "ts-node-dev ./contacts.ts",
+		"start:prod": "npm run build && node ./build/contacts.js",
+		"build": "rimraf build && tsc",
+		"reset": "node scripts/resetDevDB.js",
+		"test": "node scripts/setupTestDB.js && npx jest --silent && node scripts/deleteTestDB.js"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"prompt": "^1.1.0",
+		"sqlite3": "^5.0.2"
+	},
+	"devDependencies": {
+		"@types/colors": "^1.2.1",
+		"@types/jest": "^27.4.0",
+		"@types/node": "^17.0.10",
+		"@types/prompt": "^1.1.2",
+		"@types/sqlite3": "^3.1.8",
+		"cjstoesm": "^1.1.4",
+		"colors": "^1.4.0",
+		"cross-env": "^7.0.3",
+		"jest": "^27.4.7",
+		"mock-stdin": "^1.0.0",
+		"rimraf": "^3.0.2",
+		"ts-jest": "^27.1.3",
+		"ts-node": "^10.4.0",
+		"ts-node-dev": "^1.1.8",
+		"typescript": "^4.5.5"
+	}
 }
